tests/ui/parser/issues/issue-86895.stderr
error: expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`, found keyword `pub`
  --> $DIR/issue-86895.rs:1:7
   |
LL | const pub () {}
   |       ^^^ expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`

error: aborting due to 1 previous error

