tests/ui/parser/issues/issue-86895.rs
const pub () {}
//~^ ERROR expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`
pub fn main() {}
